fix: reduce compaction banner spacing

--- a/src/containers/Tenant/Diagnostics/Overview/TableInfo/CompactTableAction/CompactTableAction.scss
+++ b/src/containers/Tenant/Diagnostics/Overview/TableInfo/CompactTableAction/CompactTableAction.scss
@@ -13,7 +13,7 @@
     &__compaction-banner {
         width: 100%;
         max-width: 656px;
-        margin-bottom: var(--g-spacing-6);
+        margin-bottom: var(--g-spacing-4);
         padding: var(--g-spacing-4) var(--g-spacing-5);
 
         border-radius: var(--g-border-radius-m);
